--- a/.travis.yml
+++ b/.travis.yml
@@ -1,86 +1,65 @@
-language: php
-dist: xenial
-
-# Since Xenial services are not started by default, we need to instruct it below to start.
-services:
-  - xvfb
-  - mysql
-  - docker
-  - docker-compose
-
 sudo: false
+dist: trusty
+
+language: php
+
+notifications:
+  email:
+    on_success: never
+    on_failure: change
+
+branches:
+  only:
+    - master
 
 cache:
   directories:
     - $HOME/.composer/cache
 
-# Test main supported versions of PHP against latest WP.
-php:
-  - 5.6
-  - 7.0
-  - 7.1
-  - 7.2
-  - 7.3
-  - 7.4
-
-# Specifies that Travis should create builds for master branch only.
-env:
-  - WP_VERSION=latest WP_MULTISITE=0
-  
-# Additional tests against stable PHP (min version is 5.6)
-# and code coverage report.
 matrix:
-  fast_finish: true
   include:
-  - name: "Coding standard check"
-    php: 7.4
-    env: WP_VERSION=latest WP_MULTISITE=0 RUN_PHPCS=1
-  - name: "E2E tests"
-    php: 7.4
-    script:
-      - composer require wp-cli/i18n-command
-      - npm run build
-      - docker-compose up --build -d
-      - bash tests/bin/run-e2e-CI.sh
-    after_script:
-      - docker-compose down -v
-  - name: "Unit tests code coverage"
-    php: 7.4
-    env: WP_VERSION=latest WP_MULTISITE=0 RUN_CODE_COVERAGE=1
-  - name: "MainWP unit tests using WordPress nightly"
-    php: 7.4
-    env: WP_VERSION=nightly WP_MULTISITE=0
-  allow_failures:
-  - php: 7.4
-    env: WP_VERSION=latest WP_MULTISITE=0 RUN_CODE_COVERAGE=1
+    - php: 7.2
+      env: WP_VERSION=latest
+    - php: 7.1
+      env: WP_VERSION=latest
+    - php: 7.0
+      env: WP_VERSION=latest
+    - php: 5.6
+      env: WP_VERSION=latest
+    - php: 5.6
+      env: WP_VERSION=trunk
+    - php: 5.6
+      env: WP_TRAVISCI=phpcs
+    - php: 5.3
+      env: WP_VERSION=latest
+      dist: precise
 
 before_script:
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
   - |
-    # Remove Xdebug for a huge performance increase:
     if [ -f ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini ]; then
       phpenv config-rm xdebug.ini
     else
       echo "xdebug.ini does not exist"
     fi
-  - npm install
-  - composer install --no-dev
   - |
-    # Install WP Test suite, install PHPUnit globally:
-    if [[ ! -z "$WP_VERSION" ]]; then
-      bash tests/bin/install.sh mainwp_test root '' localhost $WP_VERSION
-      composer global require "phpunit/phpunit=5.7.*|7.5.*"
+    if [[ ! -z "$WP_VERSION" ]] ; then
+      bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
+      composer global require "phpunit/phpunit=4.8.*|5.7.*"
     fi
-  - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
+  - |
+    if [[ "$WP_TRAVISCI" == "phpcs" ]] ; then
+      composer global require wp-coding-standards/wpcs
+      phpcs --config-set installed_paths $HOME/.composer/vendor/wp-coding-standards/wpcs
+    fi
 
 script:
-  - bash tests/bin/phpunit.sh
-  - bash tests/bin/phpcs.sh
-
-after_script:
-  - bash tests/bin/travis.sh after
-  
-# Specifies that Travis should create builds for master branch only.
-branches:
-  only:
-    - master
+  - |
+    if [[ ! -z "$WP_VERSION" ]] ; then
+      phpunit
+      WP_MULTISITE=1 phpunit
+    fi
+  - |
+    if [[ "$WP_TRAVISCI" == "phpcs" ]] ; then
+      phpcs
+    fi
