--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,11 @@
 # Ignore all test and documentation with “export-ignore”
+.github export-ignore
+bin export-ignore
 composer.* export-ignore
 tests export-ignore
+.phpcs.xml.dist export-ignore
+.travis.yml export-ignore
+LICENSE.md export-ignore
+LICENSE.txt export-ignore
+README.md export-ignore
+phpunit.xml.dist export-ignore
