--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@
 bin export-ignore
 composer.* export-ignore
 tests export-ignore
+.gitattributes export-ignore
 .phpcs.xml.dist export-ignore
 .travis.yml export-ignore
 LICENSE.md export-ignore
