--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,10 @@ matrix:
   include:
     - php: 7.4
       env: WP_VERSION=latest
+    - php: 7.4
+      env: WP_VERSION=trunk
+    - php: 7.4
+      env: WP_TRAVISCI=phpcs
     - php: 7.3
       env: WP_VERSION=latest
     - php: 7.2
