--- a/.travis.yml
+++ b/.travis.yml
@@ -19,11 +19,7 @@ cache:
 matrix:
   include:
     - php: 7.4
-      env: WP_VERSION=latest
-    - php: 7.4
-      env: WP_VERSION=trunk
-    - php: 7.4
-      env: WP_TRAVISCI=phpcs
+      env: WP_TRAVISCI=phpcs WP_VERSION=latest
     - php: 7.3
       env: WP_VERSION=latest
     - php: 7.2
@@ -32,6 +28,10 @@ matrix:
       env: WP_VERSION=latest
     - php: 7.0
       env: WP_VERSION=latest
+    - php: 7.4
+      env: WP_VERSION=trunk
+    - php: nightly
+      env: WP_VERSION=trunk
       dist: precise
 
 before_script:
