--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ matrix:
       env: WP_VERSION=trunk
     - php: nightly
       env: WP_VERSION=trunk
-      dist: precise
+      dist: xenial
 
 before_script:
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
