--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "dealerdirect/phpcodesniffer-composer-installer": "^0.5",
         "phpcompatibility/php-compatibility": "^9.0",
         "phpunit/phpunit": "^9.0",
-        "wp-cli/wp-cli": "^2.0",
+        "wp-cli/wp-cli": "^2.0"
     },
     "autoload-dev": {
         "classmap": [
