--- a/.gitattributes
+++ b/.gitattributes
@@ -5,7 +5,7 @@ composer.* export-ignore
 tests export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
-phpcs.xml.dist export-ignore
+phpcs.xml export-ignore
 .travis.yml export-ignore
 LICENSE.md export-ignore
 LICENSE.txt export-ignore
