--- a/.github/workflows/docproc.yml
+++ b/.github/workflows/docproc.yml
@@ -6,7 +6,7 @@ name: Process MainWP PHP Documentation
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [ documentation ]
     
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
