--- a/.github/workflows/docproc.yml
+++ b/.github/workflows/docproc.yml
@@ -22,4 +22,8 @@ jobs:
        with:
           hosts: 'root@code-reference.mainwp.com'
           privateKey: ${{ secrets.PRIVATE_KEY }}
-          command: sh ~/scripts/docproc.sh
+         command: |
+            rm -rf ~/Source/mainwp/
+            git clone https://github.com/mainwp/mainwp-child.git ~/Source/mainwp/
+            sleep 3
+            sh ~/scripts/docproc.sh
