--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # Sonar project configuration - should work.
 # Exclusion
-sonar.exclusions=assets/js/apexcharts/**/*.*,assets/js/fomantic-ui/**/*.*,assets/js/gridster/**/*.*,,assets/js/dropzone/**/*.*
+sonar.exclusions=assets/js/apexcharts/**/*.*,assets/js/fomantic-ui/**/*.*,assets/js/gridster/**/*.*,assets/js/dropzone/**/*.*
 # Ignore
 sonar.issue.ignore.multicriteria=e1,e2
 sonar.issue.ignore.multicriteria.e1.ruleKey=php:S100
