--- a/libs/phpseclib/composer.json
+++ b/libs/phpseclib/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "phpseclib/phpseclib": "~3.0"
+        "php": ">=7.4",
+        "phpseclib/phpseclib": "3.0.37"
     }
 }
