Update: phpseclib dependency

--- a/libs/phpseclib/composer.json
+++ b/libs/phpseclib/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
         "php": ">=7.4",
-        "phpseclib/phpseclib": "3.0.37"
+        "phpseclib/phpseclib": "~3.0"
     }
 }
